[project]
name = "cotracker_node"
description = "This is a node that outputs tracking results of a grid or specified points using CoTracker. It can be directly connected to the WanVideo ATI Tracks Node."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/s9roll7/comfyui_cotracker_node"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_cotracker_node"
Icon = ""
includes = []
